--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,10 @@ chrono = { version = "0.4.38", features = ["serde"] }
 futures = "0.3.30"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-tokio = { version = "1.40.0", features = ["rt", "signal", "sync"] }
+tokio = { version = "1.40.0", features = ["macros", "rt", "signal", "sync"] }
 tokio-stream = "0.1.16"
 tokio-util = { version = "0.7.12", features = ["rt"] }
 tracing = "0.1.40"
-# anyhow = { workspace = true }
-# async-trait = { workspace = true }
-# chrono = { workspace = true, features = ["serde"] }
-# futures = { workspace = true }
-# serde = { workspace = true }
-# serde_json = { workspace = true }
-# tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
-# tokio-stream = { workspace = true }
-# tracing = { workspace = true }
+
+[workspace]
+members = ["examples"]
