--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "MIT"
 include = ["src/**/*.rs", "LICENSE", "*.md", "example/**/*", "Cargo.toml"]
 repository = "https://github.com/spraakbanken/webcrawler-rs"
 homepage = "https://spraakbanken.gu.se"
+rust-version = "1.61.0" # MSRV
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -18,7 +19,7 @@ doctest = false
 
 [dependencies]
 async-trait = "0.1.82"
-chrono = { version = "0.4.38", features = ["serde"] }
+chrono = { version = "0.4.37", features = ["serde"] }
 futures = "0.3.30"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
